CHANGELOG
---------

# S&B BLE Fork v1.3
- Changes to interface.
- Changes to sound files. (rainfall, artic winds)
- Added YT Video. (firewood)

# S&B BLE Fork v1.2
- added sound.
- update to interface.

# S&B BLE Fork v1.1
- Made the interface for volcano transparent.
- Changed interface size from 600px to 800px.

# S&B BLE Fork v1.0
- Moved Device Runtime to top.
- Added a background to the app.
- Increased PumpTime to 180sec.